--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
                 <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                            <img src="/assets/police1.svg" alt="Image">
+                            <img src="assets/police1.svg" alt="Image">
                         </figure>
                     </div>
                     <div class="card-content">
                         <div class="media">
                             <div class="media-left">
                                 <figure class="image is-48x48">
-                                    <img src="/assets/police1.svg" alt="Image">
+                                    <img src="assets/police1.svg" alt="Image">
                                 </figure>
                             </div>
                             <div class="media-content">
